@@ -1,5 +1,10 @@
 2018-02-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/dpx.c (ReadDPXImage): Avoid divide by zero exception in
+	the case where reference high equals reference low. Fixes oss-fuzz
+	issue 6215 "graphicsmagick/coder_DPX_fuzzer: Divide-by-zero in
+	ReadDPXImage". (Credit to OSS-Fuzz)
+
 	* coders/topol.c (ReadTOPOLImage): Avoid index out of bounds when
 	input filename does not use a file extension.
 
